// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollapsibleSidebar renders the correct mark-up - collapsed 1`] = `
.emotion-6 {
  background: #f5f6fa;
  padding: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 button {
  display: none;
}

@media screen and (min-width:640px) {
  .emotion-6 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }

  .emotion-6 button {
    display: unset;
  }
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  width: auto;
}

@media screen and (min-width:640px) {
  .emotion-4 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: initial;
    -webkit-justify-content: initial;
    -ms-flex-pack: initial;
    justify-content: initial;
  }
}

.emotion-0 {
  padding: 0.5rem;
  border-radius: 0.25rem;
  border: none;
  background: #f5f6fa;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #4a5568;
}

.emotion-0:hover {
  background: rgba(0,0,0,0.1);
}

@media screen and (min-width:640px) {
  .emotion-0 {
    margin-bottom: 0.5rem;
  }

  .emotion-0:last-of-type {
    margin-bottom: 0;
  }
}

.emotion-0.active {
  color: var(--primary);
  background: #ffffff;
}

.emotion-0 i {
  font-size: 1.5rem;
  opacity: 1;
}

.emotion-0 span {
  display: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 1rem;
  padding: 0 0.75rem;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','Roboto', 'Oxygen','Ubuntu','Cantarell','Fira Sans','Droid Sans', 'Helvetica Neue',sans-serif;
}

@media screen and (min-width:640px) {
  .emotion-0 span {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

.emotion-5 {
  padding: 0.5rem;
  border-radius: 0.25rem;
  border: none;
  background: #f5f6fa;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #4a5568;
  font-size: 1.5rem;
}

.emotion-5:hover {
  background: rgba(0,0,0,0.1);
}

@media screen and (min-width:640px) {
  .emotion-5 {
    margin-bottom: 0.5rem;
  }

  .emotion-5:last-of-type {
    margin-bottom: 0;
  }
}

.emotion-5.active {
  color: var(--primary);
  background: #ffffff;
}

.emotion-5 i {
  font-size: 1.5rem;
  opacity: 1;
}

.emotion-5 span {
  display: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 1rem;
  padding: 0 0.75rem;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','Roboto', 'Oxygen','Ubuntu','Cantarell','Fira Sans','Droid Sans', 'Helvetica Neue',sans-serif;
}

@media screen and (min-width:640px) {
  .emotion-5 span {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

<CollapsibleSidebar
  links={
    Array [
      Object {
        "icons": Array [
          "las la-fw la-home",
        ],
        "label": "Home",
        "to": "/",
      },
    ]
  }
>
  <aside
    className="emotion-6"
  >
    <div
      className="emotion-4"
    >
      <CollapsibleLink
        exact={true}
        expanded={false}
        icons={
          Array [
            "las la-fw la-home",
          ]
        }
        key="0"
        label="Home"
        to="/"
      >
        <NavLink
          className="emotion-0"
          exact={true}
          title="Home"
          to="/"
        >
          <Link
            aria-current="page"
            className="emotion-0 active"
            style={Object {}}
            title="Home"
            to={
              Object {
                "hash": "",
                "pathname": "/",
                "search": "",
                "state": null,
              }
            }
          >
            <LinkAnchor
              aria-current="page"
              className="emotion-0 active"
              href="/"
              navigate={[Function]}
              style={Object {}}
              title="Home"
            >
              <a
                aria-current="page"
                className="emotion-0 active"
                href="/"
                onClick={[Function]}
                style={Object {}}
                title="Home"
              >
                <i
                  aria-hidden="true"
                  className="las la-fw la-home"
                />
              </a>
            </LinkAnchor>
          </Link>
        </NavLink>
      </CollapsibleLink>
    </div>
    <div>
      <CollapsibleButton
        expandIcon="las la-fw la-angle-double-right"
        expanded={false}
        icon="las la-fw la-angle-double-left"
        onClick={[Function]}
      >
        <button
          className="emotion-5"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="las la-fw la-angle-double-left"
          />
        </button>
      </CollapsibleButton>
    </div>
  </aside>
</CollapsibleSidebar>
`;

exports[`CollapsibleSidebar renders the correct mark-up - expanded 1`] = `
.emotion-6 {
  background: #f5f6fa;
  padding: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 button {
  display: none;
}

@media screen and (min-width:640px) {
  .emotion-6 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }

  .emotion-6 button {
    display: unset;
  }
}

.emotion-0 {
  padding: 0.5rem;
  border-radius: 0.25rem;
  border: none;
  background: #f5f6fa;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #4a5568;
}

.emotion-0:hover {
  background: rgba(0,0,0,0.1);
}

@media screen and (min-width:640px) {
  .emotion-0 {
    margin-bottom: 0.5rem;
  }

  .emotion-0:last-of-type {
    margin-bottom: 0;
  }
}

.emotion-0.active {
  color: var(--primary);
  background: #ffffff;
}

.emotion-0 i {
  font-size: 1.5rem;
  opacity: 1;
}

.emotion-0 span {
  display: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 1rem;
  padding: 0 0.75rem;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','Roboto', 'Oxygen','Ubuntu','Cantarell','Fira Sans','Droid Sans', 'Helvetica Neue',sans-serif;
}

@media screen and (min-width:640px) {
  .emotion-0 span {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

.emotion-5 {
  padding: 0.5rem;
  border-radius: 0.25rem;
  border: none;
  background: #f5f6fa;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #4a5568;
  font-size: 1.5rem;
}

.emotion-5:hover {
  background: rgba(0,0,0,0.1);
}

@media screen and (min-width:640px) {
  .emotion-5 {
    margin-bottom: 0.5rem;
  }

  .emotion-5:last-of-type {
    margin-bottom: 0;
  }
}

.emotion-5.active {
  color: var(--primary);
  background: #ffffff;
}

.emotion-5 i {
  font-size: 1.5rem;
  opacity: 1;
}

.emotion-5 span {
  display: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 1rem;
  padding: 0 0.75rem;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','Roboto', 'Oxygen','Ubuntu','Cantarell','Fira Sans','Droid Sans', 'Helvetica Neue',sans-serif;
}

@media screen and (min-width:640px) {
  .emotion-5 span {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  width: 200px;
}

@media screen and (min-width:640px) {
  .emotion-4 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: initial;
    -webkit-justify-content: initial;
    -ms-flex-pack: initial;
    justify-content: initial;
  }
}

<CollapsibleSidebar
  links={
    Array [
      Object {
        "icons": Array [
          "las la-fw la-home",
        ],
        "label": "Home",
        "to": "/",
      },
    ]
  }
>
  <aside
    className="emotion-6"
  >
    <div
      className="emotion-4"
    >
      <CollapsibleLink
        exact={true}
        expanded={true}
        icons={
          Array [
            "las la-fw la-home",
          ]
        }
        key="0"
        label="Home"
        to="/"
      >
        <NavLink
          className="emotion-0"
          exact={true}
          title="Home"
          to="/"
        >
          <Link
            aria-current="page"
            className="emotion-0 active"
            style={Object {}}
            title="Home"
            to={
              Object {
                "hash": "",
                "pathname": "/",
                "search": "",
                "state": null,
              }
            }
          >
            <LinkAnchor
              aria-current="page"
              className="emotion-0 active"
              href="/"
              navigate={[Function]}
              style={Object {}}
              title="Home"
            >
              <a
                aria-current="page"
                className="emotion-0 active"
                href="/"
                onClick={[Function]}
                style={Object {}}
                title="Home"
              >
                <i
                  aria-hidden="true"
                  className="las la-fw la-home"
                />
                <span>
                  Home
                </span>
              </a>
            </LinkAnchor>
          </Link>
        </NavLink>
      </CollapsibleLink>
    </div>
    <div>
      <CollapsibleButton
        expandIcon="las la-fw la-angle-double-right"
        expanded={true}
        icon="las la-fw la-angle-double-left"
        onClick={[Function]}
      >
        <button
          className="emotion-5"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="las la-fw la-angle-double-right"
          />
          <span />
        </button>
      </CollapsibleButton>
    </div>
  </aside>
</CollapsibleSidebar>
`;
